--- a/index.html
+++ b/index.html
@@ -69,15 +69,18 @@
                     <div class="bingo-form">
                         <h4>Reserva tu número</h4>
                         <p>Número seleccionado: <span class="selected-number">Ninguno</span></p>
-                        <form id="bingo1Form">
-                            <div class="form-group">
-                                <label for="name1">Nombre y Apellido</label>
-                                <input type="text" id="name1" name="name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="email1">Correo electrónico</label>
-                                <input type="email" id="email1" name="email" required>
-                            </div>
+                       <form id="bingo1Form" action="https://formsubmit.co/francoalvarez27@gmail.com" method="POST">
+                       <input type="hidden" name="_captcha" value="false">
+                        <div class="form-group">
+                        <label for="name1">Nombre y Apellido</label>
+                       <input type="text" id="name2" name="name" required>
+                       </div>
+                        <div class="form-group">
+                        <label for="email1">Correo electrónico</label>
+                       <input type="email" id="email1" name="email" required>
+                       </div>
+                      <button type="submit">Enviar</button>
+                      </form>
                             <div class="payment-info">
                                 <h4>Datos de Pago</h4>
                                 <p>Precio: <strong>$5.000 CLP</strong> por número</p>
@@ -124,15 +127,18 @@
                     <div class="bingo-form">
                         <h4>Reserva tu número</h4>
                         <p>Número seleccionado: <span class="selected-number">Ninguno</span></p>
-                        <form id="bingo2Form">
+                        <form id="bingo2Form" action="https://formsubmit.co/francoalvarez27@gmail.com" method="POST">
+                        <input type="hidden" name="_captcha" value="false">
                             <div class="form-group">
-                                <label for="name2">Nombre y Apellido</label>
-                                <input type="text" id="name2" name="name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="email2">Correo electrónico</label>
-                                <input type="email" id="email2" name="email" required>
-                            </div>
+                       <label for="name2">Nombre y Apellido</label>
+                       <input type="text" id="name2" name="name" required>
+                   </div>
+                    <div class="form-group">
+                    <label for="email2">Correo electrónico</label>
+                   <input type="email" id="email2" name="email" required>
+                    </div>
+               <button type="submit">Enviar</button>
+                  </form>
                             <div class="payment-info">
                                 <h4>Datos de Pago</h4>
                                 <p>Precio: <strong>$5.000 CLP</strong> por número</p>
@@ -179,15 +185,18 @@
                     <div class="bingo-form">
                         <h4>Reserva tu número</h4>
                         <p>Número seleccionado: <span class="selected-number">Ninguno</span></p>
-                        <form id="bingo3Form">
-                            <div class="form-group">
-                                <label for="name3">Nombre y Apellido</label>
-                                <input type="text" id="name3" name="name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="email3">Correo electrónico</label>
-                                <input type="email" id="email3" name="email" required>
-                            </div>
+                        <form id="bingo3Form" action="https://formsubmit.co/francoalvarez27@gmail.com" method="POST">
+                        <input type="hidden" name="_captcha" value="false">
+                       <div class="form-group">
+                       <label for="name3">Nombre y Apellido</label>
+                       <input type="text" id="name3" name="name" required>
+                     </div>
+                   <div class="form-group">
+                   <label for="email3">Correo electrónico</label>
+                   <input type="email" id="email3" name="email" required>
+                   </div>
+                 <button type="submit">Enviar</button>
+                 </form>
                             <div class="payment-info">
                                 <h4>Datos de Pago</h4>
                                 <p>Precio: <strong>$5.000 CLP</strong> por número</p>
@@ -234,15 +243,18 @@
                     <div class="bingo-form">
                         <h4>Reserva tu número</h4>
                         <p>Número seleccionado: <span class="selected-number">Ninguno</span></p>
-                        <form id="bingo4Form">
-                            <div class="form-group">
-                                <label for="name4">Nombre y Apellido</label>
-                                <input type="text" id="name4" name="name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="email4">Correo electrónico</label>
-                                <input type="email" id="email4" name="email" required>
-                            </div>
+                        <form id="bingo4Form" action="https://formsubmit.co/francoalvarez27@gmail.com" method="POST">
+                    <input type="hidden" name="_captcha" value="false">
+                    <div class="form-group">
+                   <label for="name4">Nombre y Apellido</label>
+                  <input type="text" id="name4" name="name" required>
+                 </div>
+                  <div class="form-group">
+                  <label for="email2">Correo electrónico</label>
+                 <input type="email" id="email2" name="email" required>
+                 </div>
+               <button type="submit">Enviar</button>
+                </form>
                             <div class="payment-info">
                                 <h4>Datos de Pago</h4>
                                 <p>Precio: <strong>$5.000 CLP</strong> por número</p>
