--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <body>
   <div style="text-align:center; margin-top: 20px;">
-    <a href="https://www.facebook.com/FrancoE.Álvarez" target="_blank" style="margin: 0 15px; color: #4267B2; font-size: 32px;">
+    <a href="https://www.facebook.com/franco.e.saldivia" target="_blank" style="margin: 0 15px; color: #4267B2; font-size: 32px;">
       <i class="fab fa-facebook"></i>
     </a>
 
